# restaurant_api

./: pyproject.toml
restaurant/receipt/: admin.py  managment.py  models.py  serializers.py  tasks.py  views.py
restaurant/receipt/fixtures/: printers.json
restaurant/receipt/migrations/: 0001_initial.py  0002_alter_receipt_pdf_file.py  0003_alter_receipt_pdf_file.py
restaurant/restaurant/: settings.py  urls.py
